crates/glyph-cli/tests/corpus/invalid/imports/local_type_shadows_import_lib.glyph
export type LinkMode = <"how the user wants files linked">
